fix scrollbar blink

--- a/src/pages/OrderPage/OrderPage.scss
+++ b/src/pages/OrderPage/OrderPage.scss
@@ -51,8 +51,7 @@
       box-sizing: border-box;
       overflow-x: auto;
       color: $GrayDark;
-      height: 32px;
-      box-sizing: border-box;
+      min-height: 32px;
       border-top: 1px $GrayLight solid;
       border-bottom: 1px $GrayLight solid;
       display: flex;
@@ -61,6 +60,18 @@
       font-weight: bold;
       font-size: 14px;
       line-height: 16px;
+
+      @media (max-width: 767px) {
+        padding: 0;
+  
+        @media (orientation: portrait) {
+          position: sticky;
+          top: 87px;
+        }
+  
+        z-index: 4;
+        background-color: white;
+      }
 
       & > * {
         align-items: center;
